fix alignment of dataset name in information tab

--- a/scss/tabular_data/_tabular_data_list_sidebar.scss
+++ b/scss/tabular_data/_tabular_data_list_sidebar.scss
@@ -47,7 +47,7 @@
         .table_name, .column_name {
             display: inline-block;
             @include ellipsis;
-            max-width: 200px;
+            max-width: 185px;
             color: black;
             font-size: 16px;
             line-height:22px;
